<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contacto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="147dp"
            android:layout_height="147dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitEnd"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/aire_libre_logo"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_Formulario_Contacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Contacto1"
            android:textSize="@dimen/title_text_size"
            android:layout_marginTop="20dp"
            tools:layout_editor_absoluteX="128dp"
            tools:layout_editor_absoluteY="204dp"
            app:layout_constraintTop_toBottomOf="@+id/Logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:layout_marginTop="180dp"
                android:hint="@string/Seleccion"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteX="128dp"
                tools:layout_editor_absoluteY="204dp">

                <AutoCompleteTextView
                    android:id="@+id/Opciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:enabled="false"
                    android:hint="@string/Seleccion"
                    android:inputType="none"
                    android:textColor="#000" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_feedback"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                app:helperText="@string/Descripcion"
                android:textColorHint="@color/black"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_requerido"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/Requerido"
                android:textSize="@dimen/title_text_size"
                app:hintTextColor="@color/black"/>


            <Button
                android:id="@+id/btn_Enviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:orientation="horizontal"
                android:text="@string/Enviar"
                android:layout_marginTop="30dp"
                app:backgroundTint="@color/primary" />

            <Button
                android:id="@+id/btn_Cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:nextFocusLeft="@id/btn_Enviar"
                android:orientation="horizontal"
                android:text="@string/Cancelar"
                android:layout_marginTop="15dp"
                app:backgroundTint="@color/primary" />

        </LinearLayout>



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="@dimen/menu_button"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:scaleX="1.4"
            android:scaleY="1.4"
            android:src="@drawable/ic_baseline_menu_24"
            android:tint="@color/white"
            app:backgroundTint="@color/primary"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.962"
            app:tint="@android:color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>