<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">


    <Button
        android:id="@+id/btn_ingresar1"
        android:layout_width="@dimen/textfield_width"
        android:layout_height="@dimen/textfield_height"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/primary"
        android:text="@string/ingresar"
        android:textColor="@color/white"
        app:backgroundTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasena3"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/contrasena3"
        android:layout_width="@dimen/textfield_width"
        android:layout_height="@dimen/textfield_height"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario1"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/usuario1"
        android:layout_width="@dimen/textfield_width"
        android:layout_height="@dimen/textfield_height"
        android:layout_marginTop="25dp"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:hint="@string/usuario"
        android:inputType="textShortMessage"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitEnd"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/aire_libre_logo"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>